fix the shifting left 32px when table scrolls

--- a/services/QuillLMS/app/assets/stylesheets/pages/progress_reports/diagnostic_recommendations.scss
+++ b/services/QuillLMS/app/assets/stylesheets/pages/progress_reports/diagnostic_recommendations.scss
@@ -101,7 +101,7 @@
     position: relative;
     margin-bottom: -40px;
     padding-bottom: 40px;
-    margin-left: -365px;
+    margin-left: -335px;
     padding-left: 364px;
     display: flex;
     min-width: 100vw;
